--- a/iterm2/com.googlecode.iterm2.plist
+++ b/iterm2/com.googlecode.iterm2.plist
@@ -560,7 +560,7 @@
 		BAtzdHJlYW10eXBlZIHoA4QBQISEhAhOU1N0cmluZwGEhAhOU09iamVjdACF
 		hAErATGG
 		</data>
-		<string>198</string>
+		<string>255</string>
 	</array>
 	<key>NSTableView Hidden Columns KeyBingingTable</key>
 	<array/>
@@ -571,9 +571,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>118 448 445 270 0 0 1440 878 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>217 169 924 485 0 0 1440 878 </string>
+	<string>59 125 924 485 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>516 173 850 666 0 0 1440 878 </string>
+	<string>475 183 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>400 116 850 666 0 0 1440 878 </string>
 	<key>NSWindow Frame iTerm Window 2</key>
@@ -840,12 +840,47 @@
 			</array>
 			<key>Keyboard Map</key>
 			<dict>
+				<key>0x20-0x40000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x20</string>
+				</dict>
+				<key>0x20-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x20</string>
+				</dict>
 				<key>0x21-0x60000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x21</string>
+				</dict>
+				<key>0x21-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x21</string>
+				</dict>
+				<key>0x22-0x60000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x22</string>
+				</dict>
+				<key>0x22-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x22</string>
 				</dict>
 				<key>0x23-0x60000</key>
 				<dict>
@@ -854,12 +889,26 @@
 					<key>Text</key>
 					<string>0x1d 0x23</string>
 				</dict>
+				<key>0x23-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x23</string>
+				</dict>
 				<key>0x24-0x60000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x24</string>
+				</dict>
+				<key>0x24-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x24</string>
 				</dict>
 				<key>0x25-0x60000</key>
 				<dict>
@@ -868,12 +917,40 @@
 					<key>Text</key>
 					<string>0x1d 0x25</string>
 				</dict>
+				<key>0x25-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x25</string>
+				</dict>
 				<key>0x26-0x60000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x26</string>
+				</dict>
+				<key>0x26-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x26</string>
+				</dict>
+				<key>0x27-0x40000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x27</string>
+				</dict>
+				<key>0x27-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x27</string>
 				</dict>
 				<key>0x28-0x60000</key>
 				<dict>
@@ -882,12 +959,26 @@
 					<key>Text</key>
 					<string>0x1d 0x28</string>
 				</dict>
+				<key>0x28-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x28</string>
+				</dict>
 				<key>0x29-0x60000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x29</string>
+				</dict>
+				<key>0x29-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x29</string>
 				</dict>
 				<key>0x2a-0x60000</key>
 				<dict>
@@ -896,12 +987,68 @@
 					<key>Text</key>
 					<string>0x1d 0x2a</string>
 				</dict>
+				<key>0x2a-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x2a</string>
+				</dict>
+				<key>0x2b-0x60000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x2b</string>
+				</dict>
+				<key>0x2b-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x2b</string>
+				</dict>
+				<key>0x2c-0x40000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x2c</string>
+				</dict>
+				<key>0x2c-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x2c</string>
+				</dict>
+				<key>0x2e-0x40000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x2e</string>
+				</dict>
+				<key>0x2e-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x2e</string>
+				</dict>
 				<key>0x30-0x40000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x30</string>
+				</dict>
+				<key>0x30-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x30</string>
 				</dict>
 				<key>0x31-0x40000</key>
 				<dict>
@@ -910,12 +1057,26 @@
 					<key>Text</key>
 					<string>0x1d 0x31</string>
 				</dict>
+				<key>0x31-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x31</string>
+				</dict>
 				<key>0x32-0x40000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x32</string>
+				</dict>
+				<key>0x32-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x32</string>
 				</dict>
 				<key>0x33-0x40000</key>
 				<dict>
@@ -924,12 +1085,26 @@
 					<key>Text</key>
 					<string>0x1d 0x33</string>
 				</dict>
+				<key>0x33-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x33</string>
+				</dict>
 				<key>0x34-0x40000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x34</string>
+				</dict>
+				<key>0x34-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x34</string>
 				</dict>
 				<key>0x35-0x40000</key>
 				<dict>
@@ -938,12 +1113,26 @@
 					<key>Text</key>
 					<string>0x1d 0x35</string>
 				</dict>
+				<key>0x35-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x35</string>
+				</dict>
 				<key>0x36-0x40000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x36</string>
+				</dict>
+				<key>0x36-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x36</string>
 				</dict>
 				<key>0x37-0x40000</key>
 				<dict>
@@ -952,12 +1141,26 @@
 					<key>Text</key>
 					<string>0x1d 0x37</string>
 				</dict>
+				<key>0x37-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x37</string>
+				</dict>
 				<key>0x38-0x40000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x38</string>
+				</dict>
+				<key>0x38-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x38</string>
 				</dict>
 				<key>0x39-0x40000</key>
 				<dict>
@@ -966,19 +1169,103 @@
 					<key>Text</key>
 					<string>0x1d 0x39</string>
 				</dict>
+				<key>0x39-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x39</string>
+				</dict>
+				<key>0x3a-0x60000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x3a</string>
+				</dict>
+				<key>0x3a-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x3a</string>
+				</dict>
+				<key>0x3b-0x40000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x3b</string>
+				</dict>
+				<key>0x3b-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x3b</string>
+				</dict>
+				<key>0x3c-0x60000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x3c</string>
+				</dict>
+				<key>0x3c-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x3c</string>
+				</dict>
+				<key>0x3d-0x40000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x3d</string>
+				</dict>
+				<key>0x3d-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x3d</string>
+				</dict>
+				<key>0x3e-0x60000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x3e</string>
+				</dict>
+				<key>0x3e-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x3e</string>
+				</dict>
+				<key>0x3f-0x60000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x3f</string>
+				</dict>
+				<key>0x3f-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x3f</string>
+				</dict>
 				<key>0x5b-0x40000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x5b</string>
-				</dict>
-				<key>0x5b-0x80000</key>
-				<dict>
-					<key>Action</key>
-					<integer>11</integer>
-					<key>Text</key>
-					<string>0x1d 0x1b 0x5b</string>
 				</dict>
 				<key>0x5b-0xc0000</key>
 				<dict>
@@ -1008,6 +1295,27 @@
 					<key>Text</key>
 					<string>0x1d 0x5e</string>
 				</dict>
+				<key>0x5e-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x5e</string>
+				</dict>
+				<key>0x60-0x40000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x60</string>
+				</dict>
+				<key>0x60-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x60</string>
+				</dict>
 				<key>0x7b-0x60000</key>
 				<dict>
 					<key>Action</key>
@@ -1021,6 +1329,20 @@
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1b 0x1d 0x7b</string>
+				</dict>
+				<key>0x7c-0x60000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x7c</string>
+				</dict>
+				<key>0x7c-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x7c</string>
 				</dict>
 				<key>0x7d-0x60000</key>
 				<dict>
@@ -1036,6 +1358,20 @@
 					<key>Text</key>
 					<string>0x1b 0x1d 0x7d</string>
 				</dict>
+				<key>0x7e-0x60000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1d 0x7e</string>
+				</dict>
+				<key>0x7e-0xe0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x7e</string>
+				</dict>
 				<key>0x7f-0x40000</key>
 				<dict>
 					<key>Action</key>
@@ -1043,12 +1379,26 @@
 					<key>Text</key>
 					<string>0x1d 0x7f</string>
 				</dict>
+				<key>0x7f-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x7f</string>
+				</dict>
 				<key>0xd-0x40000</key>
 				<dict>
 					<key>Action</key>
 					<integer>11</integer>
 					<key>Text</key>
 					<string>0x1d 0x0d</string>
+				</dict>
+				<key>0xd-0xc0000</key>
+				<dict>
+					<key>Action</key>
+					<integer>11</integer>
+					<key>Text</key>
+					<string>0x1b 0x1d 0x0d</string>
 				</dict>
 				<key>0xf700-0x220000</key>
 				<dict>
@@ -1587,7 +1937,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2014-02-10T16:46:12Z</date>
+	<date>2014-03-11T04:06:38Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
